# colorful-ls

./: .gitignore  CMakeLists.txt  README.md  Tuprules.tup  main.cpp  meson.build
include/: Args.hpp  CharArray.hpp  Color.hpp  File.hpp  FileVec.hpp  Icons.hpp  LICENSE  ProgramOptions.hxx  Utils.hpp
src/: File.cpp  FileVec.cpp  List.cpp  Tupfile  clean
